<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginScreenFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.048" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.951" />

    <ImageView
        android:id="@+id/image6"
        android:layout_width="273.75dp"
        android:layout_height="101.56dp"
        android:layout_marginTop="53.45dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image6"
        android:contentDescription="@string/logoSophos" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="236.9dp"
        android:layout_height="40dp"
        android:layout_marginTop="26.72dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/loginPageText"
        android:textAlignment="center"
        android:textColor="@color/violet"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextField"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/image6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18.7dp"
        android:hint="@string/emailText"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"
            android:textColor="@color/violet"
            android:background="@drawable/background_login"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26.72dp"
        android:hint="@string/passwordText"
        app:boxStrokeColor="@color/violet"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField"
        app:startIconDrawable="@drawable/ic_outline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"
            android:textColor="@color/violet"
            android:background="@drawable/background_login"
            tools:ignore="TextContrastCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="52.11dp"
        android:background="@drawable/background_login"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:text="@string/joinButtonText"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginFingerTrace"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_login"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/loginFingerTraceText"
        android:textColor="@color/violet"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:drawableStart="@drawable/ic_baseline_fingerprint_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>